# GECS

./: Cargo.toml  Entity.txt  build.rs
crates/gecs_macro/: Cargo.toml
crates/gecs_macro/src/: lib.rs
src/: entity.rs  main.rs  query.rs  storage.rs  system.rs  world.rs
