[package]
name = "gecs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gecs_macro"]
optional = []

[dependencies]
gecs_macro = { path = "crates/gecs_macro", version = "0.1.0", optional = true }